[package]
name = "docker-db-container-login"
version = "0.2.3"
authors = ["yutak <yutak03.dev@gmail.com>"]
edition = "2024"
description = "A CLI tool for easily connecting to Docker database containers"

[[bin]]
name = "dbcli"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.41", features = ["derive"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_yaml = "=0.9.34"
anyhow = "=1.0.98"
thiserror = "=2.0.12"
directories = "=6.0.0"
tokio = { version = "=1.47.0", features = ["full", "process"] }
log = "=0.4.27"
env_logger = "=0.11.8"
tempfile = "=3.20.0"
dialoguer = "=0.11.0"
regex = "=1.11.1"
shell-escape = "=0.1.5"

# Database drivers
mysql = "=26.0.0"
postgres = { version = "=0.19.10", features = ["with-chrono-0_4"] }
mongodb = "=3.2.4"
