[package]
name = "docker-db-container-login"
version = "0.2.3"
authors = ["yutak <yutak03.dev@gmail.com>"]
edition = "2024"
description = "A CLI tool for easily connecting to Docker database containers"

[[bin]]
name = "dbcli"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.52", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_yaml = "=0.9.34"
anyhow = "=1.0.100"
thiserror = "=2.0.17"
directories = "=6.0.0"
tokio = { version = "=1.48.0", features = ["full", "process"] }
log = "=0.4.28"
env_logger = "=0.11.8"
tempfile = "=3.23.0"
dialoguer = "=0.12.0"
regex = "=1.12.2"
shell-escape = "=0.1.5"

# Database drivers
mysql = "=26.0.1"
postgres = { version = "=0.19.12", features = ["with-chrono-0_4"] }
mongodb = "=3.3.0"
