[package]
name = "docker-db-container-login"
version = "0.2.3"
authors = ["yutak <yutak03.dev@gmail.com>"]
edition = "2024"
description = "A CLI tool for easily connecting to Docker database containers"

[[bin]]
name = "ddcl"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_yaml = "=0.9.34"
anyhow = "=1.0.102"
thiserror = "=2.0.18"
directories = "=6.0.0"
tokio = { version = "=1.52.1", features = ["full", "process"] }
log = "=0.4.29"
env_logger = "=0.11.10"
tempfile = "=3.27.0"
dialoguer = "=0.12.0"
regex = "=1.12.3"
shell-escape = "=0.1.5"

# Database drivers
mysql = "=27.0.0"
postgres = { version = "=0.19.13", features = ["with-chrono-0_4"] }
mongodb = "=3.6.0"
